# Lasso

./: .gitmodules  Cargo.toml
jolt-core/: Cargo.toml
jolt-core/src/lasso/: memory_checking.rs
jolt-core/src/msm/: mod.rs
jolt-core/src/poly/: dense_mlpoly.rs  eq_poly.rs  unipoly.rs
jolt-core/src/r1cs/: gadgets.rs  mod.rs  verifier_constraints.rs
jolt-core/src/subprotocols/: grand_product.rs  sumcheck.rs
src/: e2e_test_grumpkin.rs  lib.rs
src/msm/: mod.rs
src/poly/: dense_mlpoly.rs  unipoly.rs
src/r1cs/: constraints.rs  mod.rs  poseidon_transcript.rs  product_tree.rs  r1cs_verifier.rs  r1csinstance.rs  r1csverifier.rs  sparse_mlpoly.rs  traits.rs  transcript.rs
src/subprotocols/: sumcheck.rs
src/subtables/: jolt.rs  mod.rs
src/utils/: transcript.rs
