[package]
name = "ark-lasso"
# sync up with Arkwork's version
version = "0.4.0"
authors = [
    # author of original Spartan paper and code base 
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Wyatt Benno <wyatt@icme.io>",
]
edition = "2021"
description = "LASSO SNARK lookup argument, built on Arkworks"
documentation = "https://github.com/a16z/lasso/README.md"
repository = "https://github.com/a16z/lasso"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
merlin = "3.0.0"
rand = { version = "0.8", features = [ "std", "std_rng" ] }
digest = "0.8.1"
sha3 = "0.8.2"
rayon = { version = "1.3.0", optional = true }
subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false }
itertools = "0.10.0"
colored = "2.0.0"
thiserror = "1.0"

rand_chacha = { version = "0.3.0", default-features = false }

ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version= "0.4.0", default-features = false }
ark-std = { version = "0.4.0" }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
ark-crypto-primitives = {version = "0.4.0", features = ["sponge"] }

ark-bn254 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-grumpkin = { version = "^0.4.0", default-features = false }

# ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
criterion = { version = "0.3.1", features = ["html_reports"] }
num-integer = "0.1.45"
seq-macro = "0.3.3"
ark-curve25519 = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-texray = "0.2.0"
clap = { version = "4.3.10", features = ["derive"] }
hashbrown = "0.14.0"

poseidon-paramgen = { git = "https://github.com/nikkolasg/poseidon377", branch = "feat/v0.4" }
poseidon-parameters = { git = "https://github.com/nikkolasg/poseidon377", branch = "feat/v0.4" }

[dev-dependencies]
criterion = "0.3.1"

[lib]
name = "liblasso"
path = "src/lib.rs"

[features]
default = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "ark-ff/asm",
    "multicore",
]
multicore = ["rayon"]
ark-msm = [] # run with arkworks MSM without small field element optimization
std = ["ark-ff/std", "ark-ec/std", "ark-std/std", "ark-serialize/std"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
ark-grumpkin = { path = "./curves/grumpkin" }
ark-bn254 = { path = "./curves/bn254" }
